--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,11 @@
     <application
         android:exported="false"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo2"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:sharedUserId="android.uid.system"
         android:theme="@style/Theme.NearMeKotlinDemo">
         <activity
             android:name=".activities.DirectionActivity"
@@ -29,7 +30,6 @@
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
         <activity
-
             android:name=".activities.SplashActivity"
             android:exported="true">
 
